--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div CLASS="half-width">
             <h2>Hello I'M </h2>
             <H1 class="name-highlight">SM Riyad</H1>
-            <p>I am a simple boy with bigger dream!I like to be influenced by nature. I love wild animals!Watching any wild animal in their natural habitat is the most exciting thing for me.people have their weakness. Starting something and not finishing up was my weakest point.But not anymore.</p>
+            <p>I am a simple boy with a bigger dream! I like to be influenced by nature. I love wild animals! Watching any wild animal in their natural habitat is the most exciting thing for me.people have their weaknesses. Starting something and not finishing up was my weakest point.But not anymore.</p>
             <a class="link-button" target="blank" href="https://www.facebook.com/profile.php?id=100004705247644">ADD ME</a>
         </div>
         <div CLASS="half-width">
@@ -63,7 +63,7 @@
         <p class="cliant-address">Founder & CEO Alies</p>
         <p class="review">"It was an honour to work with you Riyad! My work was perfectly done. Professionalism at it's best!!" </p>
 <div class="email-me">
-    <h4 class="email-heading">Leave me a message in the</h4>
+    <h4 class="email-heading">Leave me a message in </h4>
     <h2 class="email-name">smriyad0185@gmail.com</h2>
 
 
